# soramimic-video

./: .gitignore  .gitmodules  DESIGN.md  README.md  pyproject.toml
.github/workflows/: automerge.yaml  test.yml
bridge/: convert.mjs  package-lock.json  package.json
docs/: input-methods.md
examples/: README.md  gen_furusato.py  gen_samples.py  sample_editor.json  sample_song.mid
examples/layouts/: fictional_scientist.json
notebooks/: colab_render.ipynb
scripts/: build-editor.sh  eval_mora_alignment.py  eval_mora_words.py
src/soramimi_video/: __init__.py  cli.py  convert.py  editing.py  kana.py  musicxml.py  neutrino.py  project.py  video.py  xfparse.py
src/soramimic_video/: __init__.py  align.py  analyze_audio.py  api.py  audio_project.py  cli.py  convert.py  editor_io.py  evaluate.py  image_credit.py  kana.py  layout.py  melody_align.py  midi_project.py  mix.py  mora_align.py  musicxml.py  neutrino.py  octave.py  pitch.py  project.py  reading.py  runproc.py  separation.py  soramimic_engine.py  synth_estimate.py  synthesize.py  transcribe.py  transcribe_pitch.py  video.py  voicevox.py
src/soramimic_video/layouts/: caption.json  default.json  fictional_anime_card.json  fictional_scientist_card.json  scientist_card.json
src/soramimic_video/static/: index.html
src/soramimic_video/static/sample/: akatombo.mid  akatombo_lyrics.txt  furusato.mid  furusato_lyrics.txt  katatsumuri.mid  katatsumuri_lyrics.txt  momotarou.mid  momotarou_lyrics.txt  samples.json
tests/: helpers.py  test_align.py  test_api.py  test_audio_project.py  test_conf_wordlist_consistency.py  test_convert.py  test_editing.py  test_editor_embed.py  test_editor_io.py  test_editor_preview.py  test_evaluate.py  test_image_credit.py  test_kana_normalize.py  test_layout.py  test_melody_align.py  test_midi_project.py  test_mix.py  test_mora_align.py  test_neutrino_progress.py  test_neutrino_range.py  test_octave.py  test_pitch.py  test_reading.py  test_runproc_stream.py  test_synth_estimate.py  test_synthesize.py  test_video.py  test_voicevox.py  test_xfparse.py
tests/fixtures/: be429b67_shared_notes.json
