[project]
name = "soramimic-video"
version = "0.1.0"
description = "XF MIDIと歌詞から替え歌歌唱音源・替え歌動画を生成するパイプライン"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "xfmido>=0.0.2",
    "mido>=1.3",
    "jaconv>=0.3",
    "requests>=2.31",
]

[project.scripts]
soramimic-video = "soramimic_video.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/soramimic_video"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
# notebooks: Colabの `!`マジックや `# @param` 長行はruff対象外
extend-exclude = ["external", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# ASSヘッダのFormat/Style行は仕様上1行でなければならない
"src/soramimic_video/video.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
