[project]
name = "soramimic-video"
version = "0.1.0"
description = "XF MIDIと歌詞から替え歌歌唱音源・替え歌動画を生成するパイプライン"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "xfmido>=0.0.2",
    "mido>=1.3",
    "jaconv>=0.3",
    "requests>=2.31",
    "soramimic[mecab]>=0.1.2",
    # フレームレイアウト(layout.py)の描画。load_default(size)に10.1が要る
    "pillow>=10.1",
    "soramimic-yomi",
    "jphrase>=0.0.3",
]

[project.optional-dependencies]
# 動画生成APIサーバー(soramimic-video serve)用
api = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
]
# analyze-audio(歌唱音源入力)用の重い依存。uv sync --extra audio で入れる
audio = [
    "demucs>=4.0",
    "torch>=2.1",
    "torchaudio>=2.1",
    "torchcodec>=0.2",  # 新しめのtorchaudioは音声保存をtorchcodecに委譲する(要ffmpeg)
    "transformers>=4.40",
    "librosa>=0.10",
    "faster-whisper>=1.0",
    "mecab-python3>=1.0",
    "unidic-lite>=1.0",
    "soramimic-yomi",
    "numpy>=1.24",
]

[project.scripts]
soramimic-video = "soramimic_video.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-requests",
    # APIのテスト(fastapi TestClient)用
    "httpx>=0.27",
    # audio系の純ロジック(pitch/reading)のテスト用。モデル系依存はaudio extraのみ
    "numpy>=1.24",
    "mecab-python3>=1.0",
    "unidic-lite>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/soramimic_video"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
# notebooks: Colabの `!`マジックや `# @param` 長行はruff対象外
extend-exclude = ["external", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# ASSヘッダのFormat/Style行は仕様上1行でなければならない
"src/soramimic_video/video.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
soramimic-yomi = { git = "https://github.com/soramimic/soramimic-yomi" }
